# everything-calculator

./: .gitignore  .replit  LICENSE  README.md  app.py  calculators.json  pyproject.toml  replit.nix  requirements.txt  streamlit_app.py  vercel.json
python/: utils.py
python/calculators/: .algebra2step.py.2089977574~  algebra2step.py  circlepolygon.py  downloadspeed.py  parabola.py  parabolageneral.py  patternsequence.py  trigonometrypythagoreantheorem.py  unitconverter.py
static/css/: style.css
static/js/: calculator.js  main.js
static/js/calculators/: algebra2step.js  circlepolygon.js  patternsequence.js  trigonometrypythagoreantheorem.js
templates/: 404.html  base.html  calculator.html  index.html
templates/calculators/: algebra2step.html  circlepolygon.html  patternsequence.html  trigonometrypythagoreantheorem.html
