[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "A library of calculators"
requires-python = ">=3.12"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "matplotlib>=3.10.1",
    "numpy>=2.2.3",
    "psycopg2-binary>=2.9.10",
    "pillow>=10.4.0",
    "requests>=2.32.3",
    "sympy>=1.13.2",
]
